# fishmlserv

./: .Dockerfile.swp  Dockerfile  README.md  fly.toml  pyproject.toml
LB/: default.conf
note/: fish.ipynb  fish_model_k1.pkl  model.pkl  ss.ipynb
src/fishmlserv/: cli.py  curl.py  data.py  main.py
src/fishmlserv/model/: fish_model_k15.pkl  fish_model_k5.pkl  manager.py  model.pkl
tests/: test_curl.py
