[project]
name = "fishmlserv"
version = "0.8.0"
description = "Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
