[project]
name = "fishmlserv"
version = "0.8.1"
description = "Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = [
    "typer>=0.12.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]

[project.scripts]
get-model-path = 'fishmlserv.model.manager:print_model_path'

[tool.pytest.ini_options]
pythonpath = "src"
